--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,16 +1,56 @@
-#SRC
-#BONUS
-CC = gcc
-CFLAGS = -Wall -Wextra -Werror
-NAME = libft.a
-all: libft.a
-libft.a: *.o
-	ar -rc $(NAME) *.o
-%.o : %.c
-	$(CC) $(CFLAGS) -c $^
-clean:
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: ael-asri <ael-asri@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/11/11 15:10:45 by ael-asri          #+#    #+#              #
+#    Updated: 2021/11/17 17:05:32 by ael-asri         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
+NAME : libft.a
+
+SRCS : ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c \ 
+		ft_memmove.c ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_strncmp.c ft_memchr.c \
+		ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c \
+		ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+
+SRSCB : ft_lstnew_bonus.c ft_ft_lstadd_front_bonus.c ft_lstsize_bonus.c ft_lstlast_bonus.c ft_lstadd_back_bonus.c \
+		ft_lstdelone_bonus.c ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c
+
+OBJ = $(SRCS:.c=.o)
+
+BONUS_O = $(SRSCB:.c=.o)
+
+LIB = libft.h
+
+GCC = gcc
+
+FLAGS = -Wall -Werror -Wextra
+
+LIB1 = ar -rcs
+
+RM = rm -f
+
+all: $(NAME)
+
+$(NAME): &(OBJ)
+		$(LIB) $(NAME) $(OBJ)
+
+bonus: $(NAME) $(BONUS_O)
+		$(LIB) $(NAME) $(BONUS_O)
+
+.c.o :
+	$(GCC) $(FLAGS) -I $(LIB) -c $<
+
+clean :
 	rm *.o
-fclean: 
-	rm libft.a *.o
-re: 
-	make fclean;make all
+
+fclean:	clean
+	$(rcs) $(NAME)
+
+re :	fclean all
+
+.PHONY:	all bonus clean re
